# KnownBase

./: .gitignore  README.md  file.md  test.drawio  test.plantUML
AiTricks/: content.md
Algorithm/: algorithm-note.md
Algorithm-design Note/: algorithm-design-note.md
Algorithm-design Note/index/: algorithm-math-basic.md  perface.md
Algorithm-designNote/: algorithm-design-note.md
Algorithm-designNote/index/: algorithm-analysis-basic.md  divideConquer.md
Algorithm/AlgoExtracts/: AlgoExtracts.sln
Algorithm/index/: algorithm-basic.md  divideConquer.md  tree.md
Algorithm/keyCowCoder/: CMakeLists.txt
Algorithm/keyCowCoder/CowCoderKey/: CowCoderKey.sln  CowCoderKey.vcxproj  CowCoderKey.vcxproj.filters  HJ1.cpp  HJ10.cpp  HJ11.cpp  HJ12.cpp  HJ13.cpp  HJ14.cpp  HJ15.cpp  HJ16.cpp  HJ17.cpp  HJ18.cpp  HJ19.cpp  HJ2.cpp  HJ20.cpp  HJ21.cpp  HJ22.cpp  HJ23.cpp  HJ24.cpp  HJ25.cpp  HJ26.cpp  HJ27.cpp  HJ28.cpp  HJ29.cpp  HJ3.cpp  HJ30.cpp  HJ31.cpp  HJ32.cpp  HJ33.cpp  HJ34.cpp  HJ35.cpp  HJ36.cpp  HJ38.cpp  HJ39.cpp  HJ4.cpp  HJ43.cpp  HJ44.cpp  HJ5.cpp  HJ6.cpp  (+7 more)
Algorithm/keyLeetCode/: CMakeLists.txt
Algorithm/keyLeetCode/LeetCodeKey/: Interval0808.cpp  Interval0808.h  LeetCodeKey.sln  LeetCodeKey.vcxproj  LeetcodeUtil.h  Main.cpp  Main.h  Solution1004.cpp  Solution1004.h  Solution101.h  Solution104.cpp  Solution104.h  Solution1094.cpp  Solution1094.h  Solution1122.cpp  Solution1122.h  Solution113.cpp  Solution113.h  Solution1143.h  Solution120.h  Solution125.cpp  Solution125.h  Solution131.cpp  Solution131.h  Solution132.h  Solution135.cpp  Solution135.h  Solution138.cpp  Solution142.cpp  Solution142.h  Solution143.cpp  Solution143.h  Solution1450.cpp  Solution1450.h  Solution146.cpp  Solution146.h  Solution148.cpp  Solution15.h  Solution151.h  Solution16.cpp  (+262 more)
Algorithm/keyLeetCode/LeetCodeKey/LeetCodeKey/: LeetCodeKey.vcxproj  LeetCodeKey.vcxproj.filters  LeetcodeUtil.cpp  LeetcodeUtil.h  ListNode.h  Main.cpp  Main.h  Node.cpp  Solution1.cpp  Solution10.cpp  Solution101.cpp  Solution101.h  Solution1038.cpp  Solution1038.h  Solution104.cpp  Solution104.h  Solution105.cpp  Solution105.h  Solution11.cpp  Solution11.h  Solution110.cpp  Solution110.h  Solution113.cpp  Solution113.h  Solution1143.cpp  Solution115.cpp  Solution115.h  Solution12.cpp  Solution12.h  Solution120.cpp  Solution121.cpp  Solution121.h  Solution13.cpp  Solution13.h  Solution132.cpp  Solution138.h  Solution14.cpp  Solution14.h  Solution148.h  Solution15.cpp  (+343 more)
Algorithm/keyOd/: CMakeLists.txt  Od2518.cpp  Od2520.cpp  Od2523.cpp  Od2532.cpp  Od2533.cpp  Od4206.cpp  Od4500.cpp  Od4610.cpp  OdRun1.cpp  OdRun2.cpp  OdRun3.cpp  Solutions.h  main.cpp
AlgorithmDesign/: algorithm-design-note.md
AlgorithmNote/: algorithm-note.md
AlgorithmNote/index/: algorithm-basic.md  divideConquer.md  dynamic-programming.md  hashing.md  tree.md
CSSNote/: CSS-note.md
CSharp/: csharp-note.md
CompilationPrinciple/: compilation-principle-note.md
CompilationPrincipleNote/: compilation-principle-note.md
ComputerGraphics/: Computer-Graphics-note.md
Cpp/: cpp-note.md
Cpp/instance/CMakeInstance/: CMakeLists.txt
Cpp/instance/CMakeInstance/src/: CMakeInstance.cpp  CMakeInstance.h  CMakeLists.txt
CppNote/: Cpp-note.md
Database/: database-note.md
DatabaseNote/: Database-note.md
DesignPattern/: design-pattern-note.md
DesignPatternNote/: Design-Pattern-Note.md
EffectiveCode/: effective-code.md
GameDev/: game-development-blog.md
GameDevNote/: Game-Development-Note.md
GameScienceIntroductionNote/: Game-Science-Introduction-Note.md
HTML/: html-note.md
HTML Note/: HTML-note.md
HTMLNote/: HTML-note.md
Java/: java-note.md
JavaNote/: java-note.md
JavaSpring/: JavaSpring-note.md  java-spring-note.md
JavaSpringNote/: JavaSpring-note.md
Latex/: latex-note.md
LatexNote/: Latex-note.md
Markdown/: index.md  markdown-note.md
MarkdownNote/: MarkdownNote-Diagrams.md  MarkdownNote-Formula.md  MarkdownNote.md  README.md  index.md  markdown-note.md
NerdFont/: nerdFontCheatSheet.md
NertFont/: nerdFontCheatSheet.md  nerdFontQuickDictionary.md
NoteGuide/: note-guideline.md
Oracle/: oracle-note.md
OracleNote/: OracleNote.md
Rust/: rust.md
SoftwareTest/: software-test-note.md
SoftwareTestNote/: SoftwareTest-note.md
Tricks/: trick-log.md
TypeScript/: typeScript-note.md
UML/: uml-note.md
UML Note/: UML-note.md  lab.drawio
UMLNote/: UML-note.md  lab.drawio  pic.plantuml
Vcs/: vcs-note.md
VueNote/: Vue-Note.md
XML/: xml-note.md
XMLNote/: XML-note.md
computer-composition-principle Note/: computer-composition-principle-note.md
(+336 files in other folders)
