cmake_minimum_required(VERSION 3.29)
project(keyCowCoder)

set(CMAKE_CXX_STANDARD 17)

include_directories(CowCoderKey)

add_executable(keyCowCoder
        CowCoderKey/Main.h
        CowCoderKey/Solutions.h
        CowCoderKey/Main.cpp
        CowCoderKey/HJ1.cpp
        CowCoderKey/HJ2.cpp
        CowCoderKey/HJ3.cpp
        CowCoderKey/HJ4.cpp
        CowCoderKey/HJ5.cpp
        CowCoderKey/HJ6.cpp
        CowCoderKey/HJ7.cpp
        CowCoderKey/HJ8.cpp
        CowCoderKey/HJ9.cpp
        CowCoderKey/HJ10.cpp
        CowCoderKey/HJ11.cpp
        CowCoderKey/HJ12.cpp
        CowCoderKey/HJ13.cpp
        CowCoderKey/HJ14.cpp
        CowCoderKey/HJ15.cpp
        CowCoderKey/HJ16.cpp
        CowCoderKey/HJ17.cpp
        CowCoderKey/HJ18.cpp
        CowCoderKey/HJ19.cpp
        CowCoderKey/HJ20.cpp
        CowCoderKey/HJ21.cpp
        CowCoderKey/HJ22.cpp
        CowCoderKey/HJ23.cpp
        CowCoderKey/HJ24.cpp
        CowCoderKey/HJ25.cpp
        CowCoderKey/HJ26.cpp
        CowCoderKey/HJ27.cpp
        CowCoderKey/HJ28.cpp
        CowCoderKey/HJ29.cpp
        CowCoderKey/HJ30.cpp
        CowCoderKey/HJ31.cpp
        CowCoderKey/HJ32.cpp
        CowCoderKey/HJ33.cpp
        CowCoderKey/HJ34.cpp
        CowCoderKey/HJ35.cpp
        CowCoderKey/HJ36.cpp
        CowCoderKey/HJ38.cpp
        CowCoderKey/HJ39.cpp
        CowCoderKey/HJ43.cpp
        CowCoderKey/HJ44.cpp
        CowCoderKey/HJ68.cpp
)
